// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Popup Component > should render Popup correctly 1`] = `
<div>
  <div
    class="flex flex-col bg-[#f9fafb] dark:bg-[#1a1c20] border-[#e5e7eb] dark:border-[#2e3238]  border overflow-hidden shadow-sm text-[#4b5563] dark:text-[#d1d5db]"
    id="popup"
  >
    <div
      class="flex justify-between items-center px-5 py-3 bg-gradient-to-r from-[#e9ecf1] to-[#f0f2f5] dark:from-[#23252b] dark:to-[#282a32] border-b border-[#e5e7eb] dark:border-[#2e3238]"
    >
      <svg
        class="lucide lucide-feather w-5 h-5 text-[#8b5cf6] dark:text-[#a78bfa] opacity-80"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.67 19a2 2 0 0 0 1.416-.588l6.154-6.172a6 6 0 0 0-8.49-8.49L5.586 9.914A2 2 0 0 0 5 11.328V18a1 1 0 0 0 1 1z"
        />
        <path
          d="M16 8 2 22"
        />
        <path
          d="M17.5 15H9"
        />
      </svg>
      <h1
        class="text-xl font-medium tracking-widest flex items-center ml-2"
      >
        雅返信
      </h1>
      <div
        class="flex-1"
      />
      <div
        class="flex space-x-2"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:text-accent-foreground w-8 h-8 text-slate-600 dark:text-slate-400 hover:bg-[#e2e3e4] dark:hover:bg-[#2e3238]"
        >
          <svg
            class="lucide lucide-clock"
            data-testid="clock-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:text-accent-foreground w-8 h-8 text-slate-600 dark:text-slate-400 hover:bg-[#e2e3e4] dark:hover:bg-[#2e3238]"
          data-state="closed"
        >
          <svg
            class="lucide lucide-globe"
            data-testid="globe-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 2a14.5 14.5 0 0 0 0 20 14.5 14.5 0 0 0 0-20"
            />
            <path
              d="M2 12h20"
            />
          </svg>
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:text-accent-foreground w-8 h-8 text-slate-600 dark:text-slate-400 hover:bg-[#e2e3e4] dark:hover:bg-[#2e3238]"
          data-state="closed"
          data-testid="toggle-dark-mode"
        >
          <svg
            class="lucide lucide-moon h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"
            />
          </svg>
        </button>
        <button
          aria-controls="radix-:r2:"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:text-accent-foreground w-8 h-8 text-slate-600 dark:text-slate-400 hover:bg-[#e2e3e4] dark:hover:bg-[#2e3238]"
          data-state="closed"
          data-testid="setting-icon"
          type="button"
        >
          <svg
            class="lucide lucide-settings h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex-grow flex-1 flex flex-col space-y-2 px-5 pt-5 pb-3 max-h-[calc(100vh-7.5rem)] overflow-y-auto overflow-x-hidden"
    >
      <div
        class="relative flex-grow group"
        data-testid="text-input"
      >
        <textarea
          class="flex min-h-[60px] w-full border border-input px-3 py-2 shadow-sm placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 md:text-sm h-full resize-none text-sm scrollbar-custom rounded-lg dark:bg-slate-800 dark:text-slate-100 dark:placeholder-slate-400 bg-white text-slate-900 placeholder-slate-500 pr-5"
          data-testid="input-textarea"
          placeholder="Input placeholder"
        />
      </div>
      <div
        class="flex items-center"
      >
        <div
          class="flex items-center space-x-2 shrink-0 mr-3 transition-all duration-300 ease-in-out w-full"
        >
          <button
            aria-checked="true"
            class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent shadow-sm transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=unchecked]:bg-input data-[state=checked]:bg-[#8b5cf6] dark:data-[state=checked]:bg-[#a78bfa]"
            data-state="checked"
            data-testid="auto-subject-toggle"
            id="auto-subject"
            role="switch"
            type="button"
            value="on"
          >
            <span
              class="pointer-events-none block h-4 w-4 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
              data-state="checked"
            />
          </button>
          <label
            class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 cursor-pointer whitespace-nowrap"
            for="auto-subject"
          >
            Generate subject
          </label>
        </div>
        <div
          class="transition-all duration-300 ease-in-out w-0 opacity-0"
        >
          <input
            class="flex h-9 rounded-md border border-input px-3 py-1 shadow-sm transition-colors file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 md:text-sm w-full text-sm dark:bg-slate-800 dark:text-slate-100 dark:placeholder-slate-400 bg-white text-slate-900 placeholder-slate-500"
            data-testid="subject-input"
            placeholder="Input subject"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="flex items-center px-5 py-3 border-t border-[#e5e7eb] dark:border-[#2e3238] bg-[#f3f4f6] dark:bg-[#23252b]"
    >
      <button
        aria-autocomplete="none"
        aria-controls="radix-:r3:"
        aria-expanded="false"
        class="flex items-center justify-between whitespace-nowrap border px-3 py-2 text-sm shadow-sm ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-1 focus:ring-ring disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 w-26 h-9 rounded-md border-[#e5e7eb] dark:border-[#2e3238] bg-white dark:bg-[#1f2128]"
        data-placeholder=""
        data-state="closed"
        dir="ltr"
        role="combobox"
        type="button"
      >
        <span
          style="pointer-events: none;"
        >
          选择语言
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down h-4 w-4 opacity-50"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </button>
      <div
        class="flex-1"
      />
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 shadow py-2 relative ml-2 h-9 px-3 text-ms bg-slate-200 dark:bg-slate-700 hover:bg-[#f9fafb] dark:hover:bg-[#2e3238]"
        disabled=""
      >
        <svg
          class="lucide lucide-wand-sparkles h-4 w-4 text-[#8b5cf6] dark:text-[#a78bfa] opacity-80"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.64 3.64-1.28-1.28a1.21 1.21 0 0 0-1.72 0L2.36 18.64a1.21 1.21 0 0 0 0 1.72l1.28 1.28a1.2 1.2 0 0 0 1.72 0L21.64 5.36a1.2 1.2 0 0 0 0-1.72"
          />
          <path
            d="m14 7 3 3"
          />
          <path
            d="M5 6v4"
          />
          <path
            d="M19 14v4"
          />
          <path
            d="M10 2v2"
          />
          <path
            d="M7 8H3"
          />
          <path
            d="M21 16h-4"
          />
          <path
            d="M11 3H9"
          />
        </svg>
        <span>
          Polish
        </span>
      </button>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 shadow py-2 relative ml-2 h-9 px-3 text-ms bg-slate-200 dark:bg-slate-700 hover:bg-[#f9fafb] dark:hover:bg-[#2e3238]"
        disabled=""
      >
        <svg
          class="lucide lucide-languages h-4 w-4 text-[#8b5cf6] dark:text-[#a78bfa] opacity-80"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m5 8 6 6"
          />
          <path
            d="m4 14 6-6 2-3"
          />
          <path
            d="M2 5h12"
          />
          <path
            d="M7 2h1"
          />
          <path
            d="m22 22-5-10-5 10"
          />
          <path
            d="M14 18h6"
          />
        </svg>
        <span>
          Translation
        </span>
      </button>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 py-2 relative overflow-hidden ml-2 h-9 px-3 text-white font-normal rounded-md shadow-sm hover:shadow bg-[#8b5cf6] hover:bg-[#7c3aed] dark:bg-[#a78bfa] dark:hover:bg-[#9061f9]"
        data-testid="reply-button"
        disabled=""
      >
        <span>
          Generate
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Popup Component > should show clear button when inputText is not empty 1`] = `
<div>
  <div
    class="flex flex-col bg-[#f9fafb] dark:bg-[#1a1c20] border-[#e5e7eb] dark:border-[#2e3238]  border overflow-hidden shadow-sm text-[#4b5563] dark:text-[#d1d5db]"
    id="popup"
  >
    <div
      class="flex justify-between items-center px-5 py-3 bg-gradient-to-r from-[#e9ecf1] to-[#f0f2f5] dark:from-[#23252b] dark:to-[#282a32] border-b border-[#e5e7eb] dark:border-[#2e3238]"
    >
      <svg
        class="lucide lucide-feather w-5 h-5 text-[#8b5cf6] dark:text-[#a78bfa] opacity-80"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.67 19a2 2 0 0 0 1.416-.588l6.154-6.172a6 6 0 0 0-8.49-8.49L5.586 9.914A2 2 0 0 0 5 11.328V18a1 1 0 0 0 1 1z"
        />
        <path
          d="M16 8 2 22"
        />
        <path
          d="M17.5 15H9"
        />
      </svg>
      <h1
        class="text-xl font-medium tracking-widest flex items-center ml-2"
      >
        雅返信
      </h1>
      <div
        class="flex-1"
      />
      <div
        class="flex space-x-2"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:text-accent-foreground w-8 h-8 text-slate-600 dark:text-slate-400 hover:bg-[#e2e3e4] dark:hover:bg-[#2e3238]"
        >
          <svg
            class="lucide lucide-clock"
            data-testid="clock-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:text-accent-foreground w-8 h-8 text-slate-600 dark:text-slate-400 hover:bg-[#e2e3e4] dark:hover:bg-[#2e3238]"
          data-state="closed"
        >
          <svg
            class="lucide lucide-globe"
            data-testid="globe-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 2a14.5 14.5 0 0 0 0 20 14.5 14.5 0 0 0 0-20"
            />
            <path
              d="M2 12h20"
            />
          </svg>
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:text-accent-foreground w-8 h-8 text-slate-600 dark:text-slate-400 hover:bg-[#e2e3e4] dark:hover:bg-[#2e3238]"
          data-state="closed"
          data-testid="toggle-dark-mode"
        >
          <svg
            class="lucide lucide-moon h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"
            />
          </svg>
        </button>
        <button
          aria-controls="radix-:r2a:"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:text-accent-foreground w-8 h-8 text-slate-600 dark:text-slate-400 hover:bg-[#e2e3e4] dark:hover:bg-[#2e3238]"
          data-state="closed"
          data-testid="setting-icon"
          type="button"
        >
          <svg
            class="lucide lucide-settings h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex-grow flex-1 flex flex-col space-y-2 px-5 pt-5 pb-3 max-h-[calc(100vh-7.5rem)] overflow-y-auto overflow-x-hidden"
    >
      <div
        class="relative flex-grow group"
        data-testid="text-input"
      >
        <textarea
          class="flex min-h-[60px] w-full border border-input px-3 py-2 shadow-sm placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 md:text-sm h-full resize-none text-sm scrollbar-custom rounded-lg dark:bg-slate-800 dark:text-slate-100 dark:placeholder-slate-400 bg-white text-slate-900 placeholder-slate-500 pr-5"
          data-testid="input-textarea"
          placeholder="Input placeholder"
        >
          test input text
        </textarea>
        <div
          animate="[object Object]"
          class="absolute top-2 right-2"
          exit="[object Object]"
          initial="[object Object]"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-6 w-6"
            data-testid="text-clear-icon"
          >
            <svg
              class="lucide lucide-x h-6 w-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
          </button>
        </div>
        <div
          class="absolute bottom-1 right-2 opacity-0 group-hover:opacity-100 transition-opacity duration-200"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent h-6 w-6 text-slate-500 hover:text-slate-900 relative"
            data-testid="copy-icon-group"
          >
            <div
              animate="[object Object]"
              class="absolute inset-0 flex items-center justify-center"
              exit="[object Object]"
              initial="[object Object]"
              transition="[object Object]"
            >
              <svg
                class="lucide lucide-copy h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="14"
                  rx="2"
                  ry="2"
                  width="14"
                  x="8"
                  y="8"
                />
                <path
                  d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
      <div
        class="flex items-center"
      >
        <div
          class="flex items-center space-x-2 shrink-0 mr-3 transition-all duration-300 ease-in-out w-full"
        >
          <button
            aria-checked="true"
            class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent shadow-sm transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=unchecked]:bg-input data-[state=checked]:bg-[#8b5cf6] dark:data-[state=checked]:bg-[#a78bfa]"
            data-state="checked"
            data-testid="auto-subject-toggle"
            id="auto-subject"
            role="switch"
            type="button"
            value="on"
          >
            <span
              class="pointer-events-none block h-4 w-4 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
              data-state="checked"
            />
          </button>
          <label
            class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 cursor-pointer whitespace-nowrap"
            for="auto-subject"
          >
            Generate subject
          </label>
        </div>
        <div
          class="transition-all duration-300 ease-in-out w-0 opacity-0"
        >
          <input
            class="flex h-9 rounded-md border border-input px-3 py-1 shadow-sm transition-colors file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 md:text-sm w-full text-sm dark:bg-slate-800 dark:text-slate-100 dark:placeholder-slate-400 bg-white text-slate-900 placeholder-slate-500"
            data-testid="subject-input"
            placeholder="Input subject"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="flex items-center px-5 py-3 border-t border-[#e5e7eb] dark:border-[#2e3238] bg-[#f3f4f6] dark:bg-[#23252b]"
    >
      <button
        aria-autocomplete="none"
        aria-controls="radix-:r2b:"
        aria-expanded="false"
        class="flex items-center justify-between whitespace-nowrap border px-3 py-2 text-sm shadow-sm ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-1 focus:ring-ring disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 w-26 h-9 rounded-md border-[#e5e7eb] dark:border-[#2e3238] bg-white dark:bg-[#1f2128]"
        data-placeholder=""
        data-state="closed"
        dir="ltr"
        role="combobox"
        type="button"
      >
        <span
          style="pointer-events: none;"
        >
          选择语言
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down h-4 w-4 opacity-50"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </button>
      <div
        class="flex-1"
      />
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 shadow py-2 relative ml-2 h-9 px-3 text-ms bg-slate-200 dark:bg-slate-700 hover:bg-[#f9fafb] dark:hover:bg-[#2e3238]"
      >
        <svg
          class="lucide lucide-wand-sparkles h-4 w-4 text-[#8b5cf6] dark:text-[#a78bfa] opacity-80"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.64 3.64-1.28-1.28a1.21 1.21 0 0 0-1.72 0L2.36 18.64a1.21 1.21 0 0 0 0 1.72l1.28 1.28a1.2 1.2 0 0 0 1.72 0L21.64 5.36a1.2 1.2 0 0 0 0-1.72"
          />
          <path
            d="m14 7 3 3"
          />
          <path
            d="M5 6v4"
          />
          <path
            d="M19 14v4"
          />
          <path
            d="M10 2v2"
          />
          <path
            d="M7 8H3"
          />
          <path
            d="M21 16h-4"
          />
          <path
            d="M11 3H9"
          />
        </svg>
        <span>
          Polish
        </span>
      </button>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 shadow py-2 relative ml-2 h-9 px-3 text-ms bg-slate-200 dark:bg-slate-700 hover:bg-[#f9fafb] dark:hover:bg-[#2e3238]"
      >
        <svg
          class="lucide lucide-languages h-4 w-4 text-[#8b5cf6] dark:text-[#a78bfa] opacity-80"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m5 8 6 6"
          />
          <path
            d="m4 14 6-6 2-3"
          />
          <path
            d="M2 5h12"
          />
          <path
            d="M7 2h1"
          />
          <path
            d="m22 22-5-10-5 10"
          />
          <path
            d="M14 18h6"
          />
        </svg>
        <span>
          Translation
        </span>
      </button>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 py-2 relative overflow-hidden ml-2 h-9 px-3 text-white font-normal rounded-md shadow-sm hover:shadow bg-[#8b5cf6] hover:bg-[#7c3aed] dark:bg-[#a78bfa] dark:hover:bg-[#9061f9]"
        data-testid="reply-button"
      >
        <span>
          Generate
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Popup Component > should toggle autoSubject state when clicking the toggle 1`] = `
<div>
  <div
    class="flex flex-col bg-[#f9fafb] dark:bg-[#1a1c20] border-[#e5e7eb] dark:border-[#2e3238]  border overflow-hidden shadow-sm text-[#4b5563] dark:text-[#d1d5db]"
    id="popup"
  >
    <div
      class="flex justify-between items-center px-5 py-3 bg-gradient-to-r from-[#e9ecf1] to-[#f0f2f5] dark:from-[#23252b] dark:to-[#282a32] border-b border-[#e5e7eb] dark:border-[#2e3238]"
    >
      <svg
        class="lucide lucide-feather w-5 h-5 text-[#8b5cf6] dark:text-[#a78bfa] opacity-80"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.67 19a2 2 0 0 0 1.416-.588l6.154-6.172a6 6 0 0 0-8.49-8.49L5.586 9.914A2 2 0 0 0 5 11.328V18a1 1 0 0 0 1 1z"
        />
        <path
          d="M16 8 2 22"
        />
        <path
          d="M17.5 15H9"
        />
      </svg>
      <h1
        class="text-xl font-medium tracking-widest flex items-center ml-2"
      >
        雅返信
      </h1>
      <div
        class="flex-1"
      />
      <div
        class="flex space-x-2"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:text-accent-foreground w-8 h-8 text-slate-600 dark:text-slate-400 hover:bg-[#e2e3e4] dark:hover:bg-[#2e3238]"
        >
          <svg
            class="lucide lucide-clock"
            data-testid="clock-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:text-accent-foreground w-8 h-8 text-slate-600 dark:text-slate-400 hover:bg-[#e2e3e4] dark:hover:bg-[#2e3238]"
          data-state="closed"
        >
          <svg
            class="lucide lucide-globe"
            data-testid="globe-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 2a14.5 14.5 0 0 0 0 20 14.5 14.5 0 0 0 0-20"
            />
            <path
              d="M2 12h20"
            />
          </svg>
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:text-accent-foreground w-8 h-8 text-slate-600 dark:text-slate-400 hover:bg-[#e2e3e4] dark:hover:bg-[#2e3238]"
          data-state="closed"
          data-testid="toggle-dark-mode"
        >
          <svg
            class="lucide lucide-moon h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"
            />
          </svg>
        </button>
        <button
          aria-controls="radix-:re:"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:text-accent-foreground w-8 h-8 text-slate-600 dark:text-slate-400 hover:bg-[#e2e3e4] dark:hover:bg-[#2e3238]"
          data-state="closed"
          data-testid="setting-icon"
          type="button"
        >
          <svg
            class="lucide lucide-settings h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex-grow flex-1 flex flex-col space-y-2 px-5 pt-5 pb-3 max-h-[calc(100vh-7.5rem)] overflow-y-auto overflow-x-hidden"
    >
      <div
        class="relative flex-grow group"
        data-testid="text-input"
      >
        <textarea
          class="flex min-h-[60px] w-full border border-input px-3 py-2 shadow-sm placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 md:text-sm h-full resize-none text-sm scrollbar-custom rounded-lg dark:bg-slate-800 dark:text-slate-100 dark:placeholder-slate-400 bg-white text-slate-900 placeholder-slate-500 pr-5"
          data-testid="input-textarea"
          placeholder="Input placeholder"
        />
      </div>
      <div
        class="flex items-center"
      >
        <div
          class="flex items-center space-x-2 shrink-0 mr-3 transition-all duration-300 ease-in-out w-36"
        >
          <button
            aria-checked="false"
            class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent shadow-sm transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=unchecked]:bg-input data-[state=checked]:bg-[#8b5cf6] dark:data-[state=checked]:bg-[#a78bfa]"
            data-state="unchecked"
            data-testid="auto-subject-toggle"
            id="auto-subject"
            role="switch"
            type="button"
            value="on"
          >
            <span
              class="pointer-events-none block h-4 w-4 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
              data-state="unchecked"
            />
          </button>
          <label
            class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 cursor-pointer whitespace-nowrap"
            for="auto-subject"
          >
            Generate subject
          </label>
        </div>
        <div
          class="transition-all duration-300 ease-in-out w-full opacity-100"
        >
          <input
            class="flex h-9 rounded-md border border-input px-3 py-1 shadow-sm transition-colors file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 md:text-sm w-full text-sm dark:bg-slate-800 dark:text-slate-100 dark:placeholder-slate-400 bg-white text-slate-900 placeholder-slate-500"
            data-testid="subject-input"
            placeholder="Input subject"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="flex items-center px-5 py-3 border-t border-[#e5e7eb] dark:border-[#2e3238] bg-[#f3f4f6] dark:bg-[#23252b]"
    >
      <button
        aria-autocomplete="none"
        aria-controls="radix-:rf:"
        aria-expanded="false"
        class="flex items-center justify-between whitespace-nowrap border px-3 py-2 text-sm shadow-sm ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-1 focus:ring-ring disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 w-26 h-9 rounded-md border-[#e5e7eb] dark:border-[#2e3238] bg-white dark:bg-[#1f2128]"
        data-placeholder=""
        data-state="closed"
        dir="ltr"
        role="combobox"
        type="button"
      >
        <span
          style="pointer-events: none;"
        >
          选择语言
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down h-4 w-4 opacity-50"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </button>
      <div
        class="flex-1"
      />
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 shadow py-2 relative ml-2 h-9 px-3 text-ms bg-slate-200 dark:bg-slate-700 hover:bg-[#f9fafb] dark:hover:bg-[#2e3238]"
        disabled=""
      >
        <svg
          class="lucide lucide-wand-sparkles h-4 w-4 text-[#8b5cf6] dark:text-[#a78bfa] opacity-80"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.64 3.64-1.28-1.28a1.21 1.21 0 0 0-1.72 0L2.36 18.64a1.21 1.21 0 0 0 0 1.72l1.28 1.28a1.2 1.2 0 0 0 1.72 0L21.64 5.36a1.2 1.2 0 0 0 0-1.72"
          />
          <path
            d="m14 7 3 3"
          />
          <path
            d="M5 6v4"
          />
          <path
            d="M19 14v4"
          />
          <path
            d="M10 2v2"
          />
          <path
            d="M7 8H3"
          />
          <path
            d="M21 16h-4"
          />
          <path
            d="M11 3H9"
          />
        </svg>
        <span>
          Polish
        </span>
      </button>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 shadow py-2 relative ml-2 h-9 px-3 text-ms bg-slate-200 dark:bg-slate-700 hover:bg-[#f9fafb] dark:hover:bg-[#2e3238]"
        disabled=""
      >
        <svg
          class="lucide lucide-languages h-4 w-4 text-[#8b5cf6] dark:text-[#a78bfa] opacity-80"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m5 8 6 6"
          />
          <path
            d="m4 14 6-6 2-3"
          />
          <path
            d="M2 5h12"
          />
          <path
            d="M7 2h1"
          />
          <path
            d="m22 22-5-10-5 10"
          />
          <path
            d="M14 18h6"
          />
        </svg>
        <span>
          Translation
        </span>
      </button>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 py-2 relative overflow-hidden ml-2 h-9 px-3 text-white font-normal rounded-md shadow-sm hover:shadow bg-[#8b5cf6] hover:bg-[#7c3aed] dark:bg-[#a78bfa] dark:hover:bg-[#9061f9]"
        data-testid="reply-button"
        disabled=""
      >
        <span>
          Generate
        </span>
      </button>
    </div>
  </div>
</div>
`;
